--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -110,7 +110,7 @@ In the following sections we describe the architecture of the system and its bui
 \end{itemize}
 
 \subsubsection{AntsReview}
-AntsReview (See Figure \ref{fig:contracts}) is the core of the smart contracts written in \emph{Solidity}\footnote[6]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io/en/v0.6.8.}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine (EVM), deployed on Ethereum Rinkeby's Testnet\footnote[7]{\emph{}.\textsc{URL:}https://solidity.readthedocs.io/en/v0.6.8.}.
+AntsReview (See Figure \ref{fig:contracts}) is the core of the smart contracts written in \emph{Solidity}\footnote[6]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine (EVM), deployed on Ethereum Rinkeby's Testnet\footnote[7]{\emph{Rinkeby Testnet}.\textsc{URL:}https://rinkeby.etherscan.io.}.
 \newline It implements a bounty-like system where Alice (issuer, author or editor) can issue an AntReview with the function \emph{issueAntReview()}, where is asked a series of actions to ensure transparency and consistency for the AntReview that she is creating:
 \begin{itemize}
   \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS}, a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet, and specify the IPFS Hash to be stored in the Ethereum Blockchain as \emph{proof of existence}, a notarization process by wich a document hash is timestamped into the block of Ethereum where the transaction take place, that allow manual verification of the existence of the document.
@@ -122,7 +122,7 @@ AntsReview (See Figure \ref{fig:contracts}) is the core of the smart contracts w
 \newline Alice can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, specifying the AntReview Identifier as well as the peer-review identifier, that will transfer the reward specified for the AntReview from the contract to Bob.
 \newline If Alice doen't receive any peer-review, she can cancel the AntReview with the function \emph{cancelAntReview()}, specifying the AntReview Identifier, and the contract will transfer the reward for the AntReview back to Alice.
 
-AntsReviewRoles, to ensure integrity of the system, implements an access management, leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library \cite{OZ}, through the creation of the Issuer and Peer-Reviewer Roles.
+AntsReviewRoles, to ensure integrity of the system, implements an access management, leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[8]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.}, through the creation of the Issuer and Peer-Reviewer Roles.
 \newline It also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the smart contracts, able to pause (or unpause) the functions in case of a security emergency, like an attack to the smart contracts. In this way, only the Issuer can create a new AntReview.
 \newline One of the key aspects of the protocol is the concept of Proof of Existence, introduced by Stuart Haber \& W. Scott Stornetta \cite{TimeStamp-Haber}. Pioneers of the blockchain, cited by the Bitcoin whitepaper\cite{Bitcoin}, they were on a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin as its first application. In Ethereum \cite{Ethereum} the concept of immutability is achieved via the blockchain and the proof of work consensus algorithm by a chain of timestamped block merkle tree root hashes that are secured by miners competing computations.
 \newline Ants-Review is evaluating the advantages of storing the hashes of the peer-reviews into a Merkle Tree \cite{BayerHaber1992} to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
@@ -130,18 +130,18 @@ AntsReviewRoles, to ensure integrity of the system, implements an access managem
 \newline The paper and peer-review documents will be included into a Merkle Tree by hashing the data using \emph{keccak256}, a cryptographic hashing algorithm available in Solidity.
 
 \subsubsection{Tokenomics}
-AntsReview integrates few tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
+AntsReview integrates ERC20 tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
 \newline ANTS, is the primary protocol ERC20 token and can be staked into an AntReview.
 \newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS, is a wrapper of ANTS that will be used inside the protocol to allow private transactions on mainnet among the agents, preserving their anonimity as well as the amount of the AntReview reward and the contributions by the Anters (members of Ants-Review Community).
-\newline zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine \emph{ACE.sol}, a contract responsible for for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token, that follows the EIP-1724 standard \footnote{\url{https://github.com/ethereum/EIPs/issues/1724}} will be used as template to build an AZTEC-compatible asset.
-\newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs, will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions on mainnet.
+\newline zkANTS, is a wrapper of ANTS that will be used inside the protocol to allow private transactions among the agents, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters (members of Ants-Review Community).
+\newline zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token, that follows the EIP-1724 standard \footnote[9]{\url{https://github.com/ethereum/EIPs/issues/1724.}} will be used as template to build an AZTEC-compatible asset.
+\newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs, will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions.
 
 \subsubsection{Privacy}
 The anonymity of an agent in the system is achieved in two ways:
 
 \begin{itemize}
-  \item via pseudo-anonimity granted through Ethereum's Externally Owned Accounts (EOA) addresses that can pseudo-obscure the identity of the agent.
+  \item via pseudo-anonymity granted through Ethereum's Externally Owned Accounts (EOA) addresses that can pseudo-obscure the identity of the agent.
   \item via private transactions allowed by AZTEC Protocol security layer via zkANTS. Future developments will allow to leverage on PLONK\cite{PLONK}proofs, a universal ZK-SNARK construction, to reduce gas costs and improve scalability.
 \end{itemize}
 
@@ -155,13 +155,13 @@ The anonymity of an agent in the system is achieved in two ways:
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
 \subsection{Possible developments}
-An AntReview, issued by an author would be seen as a poll, a container where Anters can stake Ether or ERC20 tokens from DeFi services including Dai \cite{Dai}, Chai \cite{Chai}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate) \cite{DSR} or Compound \cite{Compound} to cite a few.
+An AntReview, issued by an author would be seen as a poll, a container where Anters can stake Ether or ERC20 tokens from DeFi services including Dai\footnote[10]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}, Chai\footnote[11]{\emph{Chai}.\textsc{URL:}https://chai.money.}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate)\footnote[12]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[13]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
  An AntsReview DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
 \newline Hive. When Anters make a deposit into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
 \newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
 \newline Hive will be implemented using a similar approach to Chai, an ERC20 token that accrues interest from MakerDAO's DSR or Compound, with name \emph{Hive} and symbol \emph{HIVE}
 \newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for ANTS and wrapped into zkANTS to promote anonymity and sent between the peer-reviewers that fulfilled the AntReview.
-\newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by Gitcoin \cite{Gitcoin} to match donations for Grants. This will allow to incentivise prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank the best Peer-Reviewers.
+\newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by \emph{Gitcoin} to match donations for grants. This will allow to incentivise prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank the best Peer-Reviewers.
 
 \subsection{Criticism}
 Some criticism towards giving a monetary reward to reviewers tackle the fact that an extrinsic motivation (such as a token system) might decrease the intrinsic motivation that drives researchers to perform scientific contributions. Some experimental studies seem indeed to suggest that reviewers are more interested in reputational forms of recognition \cite{Warne-RewRev,ZahIncent} and that material compensation affects the quality of reviews by 'undermining the moral motives that guide referees' behaviour \cite{SquazzIncent}. However, we think that engaging the whole community towards the peer-review process and rewarding each actor in it through gamified forms of reward and alternative voting systems could diminish these effects, but this is a speculation that needs to be experimentally tested.
