--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -124,32 +124,30 @@ Access management of the Ants-Review protocol is defined and controlled by AntsR
 The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent; via private transactions allowed by AZTEC Protocol\cite{AZTEC}'s security layer.
 
 \paragraph{Pseudo-anonymity.}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan) and are subject to data mining that could extract value and identify users in the blockchain.
-\paragraph{Private transactions.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{ZKSNARKs} and homomorphic encryption to validate encrypted transactions.
+\paragraph{Private transactions.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{ZKSNARKs} and homomorphic encryption\footnote[9]{\emph{Homomorphic Encryption}.\textsc{URL:}https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions.
 \newline ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier.ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents (Alice & Bob).
 \newline Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK}proofs, a universal ZK-SNARK construction that reduces gas costs and improves scalability.
 
 
 \subsubsection{Tokenomics}
-Ants-Review integrates a few \emph{ERC20}\footnote[9]{\emph{EIP 20}.\textsc{URL:}\url{https://eips.ethereum.org/EIPS/eip-20}.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
+Ants-Review integrates a few \emph{ERC20}\footnote[10]{\emph{EIP 20}.\textsc{URL:}\url{https://eips.ethereum.org/EIPS/eip-20}.} tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
 \newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview.
 \newline ANTS is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow private transactions among the agents, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters (members of the Ants-Review Community). zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[10]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}}, will be used as template to build an AZTEC-compatible asset.
+\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{d})) is a wrapper of ANTS that will be used inside the protocol to allow private transactions among the agents, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters (members of the Ants-Review Community). zkANTS will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[11]{\emph{EIP  1724}.\textsc{URL:}\url{https://github.com/ethereum/EIPs/issues/1724.}}, will be used as template to build an AZTEC-compatible asset.
 \newline To optimize and scale transactions, AZTEC Protocol ZK-SNARKs, will be extended in the future to PLONK \cite{PLONK} to collapse the gas costs of private transactions.
 
 \section{Discussions}
-In this session we discuss future developments not yet implemented and implications of AntsReview.
+We have described how Ants-Review protocol can solve the limitations of the current peer-review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see § AntsReview in 3.2); social and cognitive biases via anonymity granted by AZTEC Protocol (see § Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers by the creation of the community of Anters.
 \subsection{Future developments}
-So far we have described how Ants-Review protocol can solve the limitations of the current peer-review  system (see 2.1). In particular the lack of recognition, the lack of transparency, fraud and misconduct are solved via the Ants-Review Protocol (see § AntsReview in 3.2); social and cognitive biases arvia anonymity granted by AZTEC Protocol (see § Privacy in 3.2). 
-An AntReview, issued by an author could be seen as a poll, a container where Anters can stake Ether or ERC20 tokens from DeFi services including Dai\footnote[11]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}, Chai\footnote[12]{\emph{Chai}.\textsc{URL:}https://chai.money.}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate)\footnote[13]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[14]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
-An Ants-Review DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
-\newline Hive. When Anters make a deposit into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
-\newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
-\newline Hive will be implemented using a similar approach to Chai, an ERC20 token that accrues interest from MakerDAO's DSR or Compound, with name \emph{Hive} and symbol \emph{HIVE}
-\newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for ANTS and wrapped into zkANTS to promote anonymity and sent between the peer-reviewers that fulfilled the AntReview.
-\newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by \emph{Gitcoin} to match donations for grants. This will allow to incentivise prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank the best Peer-Reviewers.
+The Ants-Review Protocol will make the following integrations.
+An interesting aspect of the protocol is the double function of an AntReview that is a the same time a bounty and a pool to stake ERC20 tokens. Therefore, the duration of peer-reviews consents to connect the protocol to De-Fi services, such as Dai\footnote[12]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}, Chai\footnote[13]{\emph{Chai}.\textsc{URL:}https://chai.money.}, with the possibility of accruing interest over time via MakerDAO DSR (Dai Saving Rate)\footnote[14]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[15]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few. 
+In particular, we are considering to implement another ERC20 token, called \emph{Hive}, symbol \emph{HIVE}, a wrapper of ANTS that represents the accrued interest of the Anters' stake into AntReviews.
+This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
+A Decentralized Autonomous Organization (DAO) could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
+\newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by \emph{Gitcoin} to match donations for grants. This will allow to incentives prolific peer-peviewers and research and improve the stability of the system together with ideally a reward system to rank the best peer-reviewers.
 
 \subsection{A new community-driven standard?}
-As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (BioMed Central, ELife, Frontiers, PeerJ, F1000 Research). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value.
+As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value.
 In our proposal we posed two possible integrations for Ants-Review, a simpler one which maintains part of the journals' power in the peer-review evaluation and more complex one that completely decouples the peer-review process from the publishers giving it back to the scientific community and applying concepts from mechanism design. This second option, which requires further implementations, is the one we aim at. Indeed, we foresee that the future will evolve towards community-organized peer reviews: peer reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review with a reputation build within community and not journals.
 Peer reviews requires a standard: building smart-contracts for peer-reviews might set a first step in this direction and our work seems promising. We hope that soon the value of peer review as 'academic capital' will be recognized by research funders and hiring committees.
 
@@ -161,15 +159,10 @@ Source Code, DOI: 10.5281/zenodo.3953999
 \newline Proof of Concept (PoC) DApp, \url{antsreview.on.fleek.co}
 \newline Demo (PoC), DOI: 10.5281/zenodo.3964466
 
-
-
-\subsubsection{CRediT Authorship Contribution Statement}
- Bianca Trovò: Conceptualization, Investigation, Design, Writing - original draft, Writing - review \& editing. Nazzareno Massari: Project administration, Design, Software development, Visualization, Writing - review \& editing. Both authors equally contributed and supervised the project.
-
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests.
-
-\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi and Keno Budde for useful comments and discussions; Evan C. Harris for internal review; Marcelo Colmenero for the pixel art in Figure 1.
+\small{
+\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi and Keno Budde for useful comments and discussions; Evan C. Harris for internal review; Marcelo Colmenero for the pixel art in Figure 1.}
 
 
 % ---- Bibliography ----
